syntax = "proto3";

package presence;
option go_package = "grpc-example/proto/presence";

service PresenceService {
  rpc UpdatePresence(UpdatePresenceRequest) returns (UpdatePresenceResponse);
  rpc GetPresence(GetPresenceRequest) returns (GetPresenceResponse);
  rpc StreamPresence(StreamPresenceRequest) returns (stream PresenceUpdate);
}

message UpdatePresenceRequest {
  string user_id = 1;
  bool online = 2;
  int64 last_active = 3;
  string session_id = 4;
}

message UpdatePresenceResponse {
  bool success = 1;
}

message GetPresenceRequest {
  repeated string user_ids = 1;
}

message GetPresenceResponse {
  repeated UserPresence presences = 1;
}

message StreamPresenceRequest {
  string user_id = 1;
}

message PresenceUpdate {
  string user_id = 1;
  bool online = 2;
  int64 last_active = 3;
}

message UserPresence {
  string user_id = 1;
  bool online = 2;
  int64 last_active = 3;
  int32 active_connections = 4;
}
